--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 *.png
+*.jpg
+*.json
 *.xml
 *.npy
 *.txt
@@ -8,6 +10,7 @@
 *.zip
 *.pth
 *.pt
+*.tar
 00.Data
 /mnt/hdd/eric/.tmp_ipy/15.Lab_Detection/01.Models/04.SAM_fine/wandb
 README.md
