git submodule added

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /mnt/hdd/eric/.tmp_ipy/15.Lab_Detection/01.Models/04.SAM_fine/wandb
 /mnt/hdd/eric/.tmp_ipy/15.Lab_Detection/07.Challenge/01.MapYourCity_HuggingFace/wandb
 README.md
+/mnt/hdd/eric/.tmp_ipy/15.Lab_Detection/05.Tasks/ObjectDetection/00.Benchmark/faster_rcnn_pytorch/all_datasets
